# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -1,14 +1,13 @@
 import { Response, Request } from 'express';
-import { container } from "tsyringe";
+import { container } from 'tsyringe';
 
 import { AuthenticateUserUseCase } from './AuthenticateUserUseCase';
 
 class AuthenticateUserController {
-
   async handle(request: Request, response: Response): Promise<Response> {
     const { email, password } = request.body;
 
-    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase)
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
 
     const token = await authenticateUserUseCase.execute({ email, password });
 
@@ -16,4 +15,4 @@ class AuthenticateUserController {
   }
 }
 
-export { AuthenticateUserController }
+export { AuthenticateUserController };
