# src/shared/infra/http/routes/authenticate.routes.ts
@@ -1,10 +1,14 @@
-import { AuthenticateUserController } from "@modules/accounts/useCases/authenticateUser/AuthenticateUserController";
-import { Router } from "express";
+import { Router } from 'express';
+
+import { AuthenticateUserController } from '@modules/accounts/useCases/authenticateUser/AuthenticateUserController';
+import { RefreshTokenController } from '@modules/accounts/useCases/refreshToken/RefreshTokenController';
 
 const authenticateRoutes = Router();
 
 const authenticateUserController = new AuthenticateUserController();
+const refreshTokenController = new RefreshTokenController();
 
-authenticateRoutes.post("/sessions", authenticateUserController.handle);
+authenticateRoutes.post('/sessions', authenticateUserController.handle);
+authenticateRoutes.post('/refresh-token', refreshTokenController.handle);
 
-export { authenticateRoutes }
+export { authenticateRoutes };
