# src/swagger.json
@@ -57,6 +57,11 @@
         ],
         "summary": "List all categories",
         "description": "list all categories",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success",
